# VaM-Package-Manager

./: .gitignore  LICENSE  README.md  VaMPackageManager.py  app.py  pyproject.toml  scanner.py  ui.py
varlens/: app.py  main.py  scanner.py  ui.py
